style: small spacing fixes to files header

--- a/src/ui/files/_all.scss
+++ b/src/ui/files/_all.scss
@@ -15,7 +15,7 @@
   .row {
     display: flex;
     align-items: center;
-    padding-left: 24px;
+    padding: 0 24px;
     border-bottom: 1px solid $divider-dark;
 
     &:last-of-type {
@@ -27,8 +27,8 @@
   // needed to maintain the table-style layout while using flex containers
   .file-checkbox {
     visibility: hidden;
-    width: 36px;
-    min-width: 36px;
+    width: 32px;
+    min-width: 32px;
     margin-right: 16px;
   }
 
@@ -73,7 +73,6 @@
   .file-actions {
     width: 24px;
     min-width: 24px;
-    margin-right: 24px;
 
     .item-actions {
       width: 24px;
@@ -88,7 +87,7 @@
     background-color: $black-03;
 
     > div {
-      padding-right: $padding-large;
+      padding-right: 24px;
       font-size: 12px;
       font-weight: $font-weight-semibold;
       text-align: left;
